# HollowEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.bat  Setup.sh  build.bat  compile_commands.json
.github/workflow/: ci.yml
.github/workflows/: ci.yml
Editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  SceneView.cpp  SceneView.h  main.cpp
Engine/: CMakeLists.txt  EntryPoint.cpp  EntryPoint.hpp
Engine/Core/: Application.cpp  Application.hpp  Assert.hpp  Core.h  Core.hpp  PlatformDetection.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Engine/Core/Platform/Window/: GLFWWindow.cpp  GLFWWindow.hpp
Engine/Platform/Window/: GLFWWindow.hpp  WIN32Window.cpp  WIN32Window.hpp  X11Window.cpp  X11Window.hpp
Sandbox/: CMakeLists.txt  Sandbox.cpp  main.cpp
Sandbox/assets/shaders/: basic.frag
assets/shaders/: basic.frag  basic.vert
cmake/: compiler_warnings.cmake
src/: CMakeLists.txt  main.cpp
src/Core/: Application.cpp  Application.hpp  Assert.h  Core.h  Window.cpp  Window.h  main.cpp
src/Core/Platform/Window/: GLFWWindow.cpp  GLFWWindow.h  Win32Window.cpp  Win32Window.h
src/Editor/: CMakeLists.txt  EditorViewportWidget.cpp  EditorViewportWidget.hpp  main.cpp
src/Engine/: CMakeLists.txt  EntryPoint.h  Raycaster.h
src/Engine/Core/: Application.cpp  Application.hpp  Core.hpp  Input.cpp  Input.hpp  Keycodes.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/Engine/ECS/: Components.hpp  Entity.hpp  Registry.hpp
src/Engine/Graphics/: BufferLayout.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Engine/Platform/GLFWWindow/: GLFWWindow.cpp  GLFWWindow.hpp
src/Engine/Renderer/: Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  MeshLoader.cpp  MeshLoader.hpp  Renderer.cpp  Renderer.hpp
